--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,14 @@
-baseURL = "http://morrolan.ch/"
+# Don't include the <base> tag, to prevent variety of breakage in eg a local
+# dev env
+# baseURL = "http://morrolan.ch/"
 languageCode = "en-us"
 title = ""
 theme = "coder"
 defaultcontentlanguage = "en"
 
 paginate = 20
-canonifyurls = true
+# Don't use absolute URLs for locally-hosted files (eg stylesheets)
+canonifyurls = false
 
 pygmentsstyle = "bw"
 pygmentscodefences = true
